🌐 trad: minimalist Powered By

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -262,4 +262,4 @@
 # Published with
 
 - id: published_with
-  translation: Published with {wowchemy} — the free, {repo_link}open source{/repo_link} website builder that empowers creators.
+  translation: Published with Hugo+{repo_link}wowchemy{/repo_link}
