📚 docs: This credential, by Solo.io, certifies all skills needed to get started with Istio: installing, securing and adding services.

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -260,6 +260,5 @@
   translation: Learn more
 
 # Published with
-
 - id: published_with
-  translation: Published with Hugo+{repo_link}wowchemy{/repo_link}
+  translation: Published in <a href="https://gitlab.com/davidaparicio/website" target="_blank" rel="noopener">GitOps</a> style with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
