--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -151,4 +151,4 @@
 - id: cookie_learn
   translation: En savoir plus
 - id: published_with
-  translation: Publié avec Hugo+{repo_link}wowchemy{/repo_link}
+  translation: Publié à la manière <a href="https://gitlab.com/davidaparicio/website" target="_blank" rel="noopener">GitOps</a> avec <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
