✨ feat: CloudSud2022 slides

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -262,3 +262,6 @@
 # Published with
 - id: published_with
   translation: Published in <a href="https://gitlab.com/davidaparicio/website" target="_blank" rel="noopener">GitOps</a> style with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
+
+- id: feedback
+  translation: Feedback
