--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -152,3 +152,6 @@
   translation: En savoir plus
 - id: published_with
   translation: Publié à la manière <a href="https://gitlab.com/davidaparicio/website" target="_blank" rel="noopener">GitOps</a> avec <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
+
+- id: feedback
+  translation: Avis
