--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -261,7 +261,7 @@
 
 # Published with
 - id: published_with
-  translation: Published in <a href="https://gitlab.com/davidaparicio/website" target="_blank" rel="noopener">GitOps</a> style with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
+  translation: Published in <a href="https://gitlab.com/davidaparicio/davidaparicio.gitlab.io" target="_blank" rel="noopener">GitOps</a> style with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
 
 - id: feedback
   translation: Feedback
