⬆ upgr_dep: update_wowchemy v5.0.0, enable edits

--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -152,6 +152,8 @@
   translation: En savoir plus
 - id: published_with
   translation: Publié à la manière <a href="https://gitlab.com/davidaparicio/davidaparicio.gitlab.io" target="_blank" rel="noopener">GitOps</a> avec <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>+{wowchemy}
+- id: edit_page
+  translation: Éditer cette page
 
 - id: feedback
   translation: Avis
